internal/gatewayapi/testdata/securitypolicy-invalid-no-section-name-route-rule.out.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: gateway-1
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      hostname: listener-1.gateway-1.envoyproxy.io
      name: listener-1
      port: 80
      protocol: HTTP
  status:
    listeners:
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: listener-1
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: httproute-1
    namespace: default
  spec:
    hostnames:
    - listener-1.gateway-1.envoyproxy.io
    parentRefs:
    - name: gateway-1
      namespace: envoy-gateway
      sectionName: listener-1
    rules:
    - backendRefs:
      - name: service-1
        port: 8080
      matches:
      - path:
          value: /foo
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-1
        namespace: envoy-gateway
        sectionName: listener-1
infraIR:
  envoy-gateway/gateway-1:
    proxy:
      listeners:
      - name: envoy-gateway/gateway-1/listener-1
        ports:
        - containerPort: 10080
          name: http-80
          protocol: HTTP
          servicePort: 80
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: gateway-1
          gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway
        ownerReference:
          kind: GatewayClass
          name: envoy-gateway-class
      name: envoy-gateway/gateway-1
      namespace: envoy-gateway-system
securityPolicies:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: SecurityPolicy
  metadata:
    name: policy-for-route-1
    namespace: default
  spec:
    cors:
      allowHeaders:
      - x-httproute-1
    targetRef:
      group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: httproute-1
      sectionName: not-found-section-name
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-1
        namespace: envoy-gateway
        sectionName: listener-1
      conditions:
      - lastTransitionTime: null
        message: No section name not-found-section-name found for HTTPRoute default/httproute-1
        reason: TargetNotFound
        status: "False"
        type: Accepted
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
xdsIR:
  envoy-gateway/gateway-1:
    accessLog:
      json:
      - path: /dev/stdout
    backends:
    - metadata:
        kind: HTTPRoute
        name: httproute-1
        namespace: default
      name: httproute/default/httproute-1/rule/0
      settings:
      - addressType: IP
        endpoints:
        - host: 7.7.7.7
          port: 8080
        metadata:
          kind: Service
          name: service-1
          namespace: default
          sectionName: "8080"
        name: httproute/default/httproute-1/rule/0/backend/0
        protocol: HTTP
        weight: 1
    - metadata:
        kind: Service
        name: envoy-envoy-gateway-gateway-1-196ae069
        namespace: envoy-gateway-system
        sectionName: "8080"
      name: envoy-gateway/gateway-1
      settings:
      - addressType: IP
        endpoints:
        - host: 7.6.5.4
          port: 8080
          zone: zone1
        metadata:
          kind: Service
          name: envoy-envoy-gateway-gateway-1-196ae069
          namespace: envoy-gateway-system
          sectionName: "8080"
        name: envoy-gateway/gateway-1
        protocol: TCP
    globalResources:
      proxyServiceCluster:
        backendClusterRefs:
        - name: envoy-gateway/gateway-1
        metadata:
          kind: Service
          name: envoy-envoy-gateway-gateway-1-196ae069
          namespace: envoy-gateway-system
          sectionName: "8080"
        name: envoy-gateway/gateway-1
    http:
    - address: 0.0.0.0
      externalPort: 80
      hostnames:
      - listener-1.gateway-1.envoyproxy.io
      metadata:
        kind: Gateway
        name: gateway-1
        namespace: envoy-gateway
        sectionName: listener-1
      name: envoy-gateway/gateway-1/listener-1
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10080
      routes:
      - destination:
          backendClusterRefs:
          - name: httproute/default/httproute-1/rule/0
            weight: 1
          metadata:
            kind: HTTPRoute
            name: httproute-1
            namespace: default
          name: httproute/default/httproute-1/rule/0
        hostname: listener-1.gateway-1.envoyproxy.io
        isHTTP2: false
        metadata:
          kind: HTTPRoute
          name: httproute-1
          namespace: default
        name: httproute/default/httproute-1/rule/0/match/0/listener-1_gateway-1_envoyproxy_io
        pathMatch:
          distinct: false
          name: ""
          prefix: /foo
    readyListener:
      address: 0.0.0.0
      ipFamily: IPv4
      path: /ready
      port: 19003
